@@ -26,6 +26,19 @@ static inline int io_format_writer_private_write_xml_enc ( io_format_writer_t *t
     return ( ((out_count != text_len)||( UTF8ERROR_SUCCESS != strerr)) ? -1 : 0 );
 }
 
+static inline int io_format_writer_private_write_fmt_xhtml_enc ( io_format_writer_t *this_, const char *text )
+{
+    assert ( NULL != text );
+    assert ( NULL != (*this_).output );
+    utf8error_t strerr;
+    strerr = utf8stringbuf_copy_str( (*this_).temp_output, text );
+    strerr |= utf8stringbuf_replace_all( (*this_).temp_output, (*this_).fmt_xhtml_encode_table );
+    size_t text_len = utf8stringbuf_get_length( (*this_).temp_output );
+    size_t out_count;
+    out_count = fwrite( utf8stringbuf_get_string( (*this_).temp_output ), 1 /* size of char */, text_len, (*this_).output );
+    return ( ((out_count != text_len)||( UTF8ERROR_SUCCESS != strerr)) ? -1 : 0 );
+}
+
 
 /*
 Copyright 2019-2020 Andreas Warnke
